--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.23.0",
   "devDependencies": {
     "@biomejs/biome": "2.3.7",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "tsx": "^4.20.6",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@huggingface/transformers": "^3.8.0",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
